--- a/frontmatter/title.tex
+++ b/frontmatter/title.tex
@@ -6,7 +6,7 @@
 \begin{titlepage}
 \doublespacing
 \begin{center}
-  {\titlefont My Awesome\par \vspace{10 mm}
+  {\titlefont My Awdddesome\par \vspace{10 mm}
    Dissertation \par \vspace{10 mm}
    Title}
    \vfill
