--- a/master.tex
+++ b/master.tex
@@ -2,6 +2,8 @@
 \providecommand{\main}{.} 
 \usepackage{\main/UofRdissertation}
 \begin{document}
+
+\iffalse
 \frontmatter
 \doublespacing
 \pagestyle{uofrthesis}
@@ -17,9 +19,14 @@
 \listoffigures
 \mainmatter
 \doublespacing
+\fi
+
 \subfile{\main/chapters/Informative_Title}
+\iffalse
 \subfile{\main/chapters/Informative_Title2}
 \cleardoublepage
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliography{citations}
+
+\fi
 \end{document}
