--- a/master.tex
+++ b/master.tex
@@ -19,7 +19,7 @@
 \doublespacing
 \subfile{\main/chapters/Informative_Title}
 \subfile{\main/chapters/Informative_Title2}
-\subfile{\main/chapters/Informative_Title3}
+\subfile{\main/chapters/devices}
 \cleardoublepage
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliography{citations}
