--- a/master.tex
+++ b/master.tex
@@ -16,10 +16,19 @@
 \addcontentsline{toc}{chapter}{\listfigurename}
 \listoffigures
 \mainmatter
+
+%chapters:
 \doublespacing
-\subfile{\main/chapters/Informative_Title}
-\subfile{\main/chapters/Informative_Title2}
-\subfile{\main/chapters/devices}
+\subfile{\main/chapters/1 - introduction}
+\subfile{\main/chapters/2 - theoretical background}
+\subfile{\main/chapters/3 - thesis aims}
+\subfile{\main/chapters/4 - methods and results}
+\subfile{\main/chapters/5 - summary and conclusion}
+%\subfile{\main/chapters/devices}
+
+
+
+
 \cleardoublepage
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliography{citations}
