--- a/master.tex
+++ b/master.tex
@@ -8,10 +8,10 @@
 \subfile{\main/frontmatter/title}
 \subfile{\main/frontmatter/dedication}
 \tableofcontents
-\subfile{\main/frontmatter/biography}
+%\subfile{\main/frontmatter/biography}
 \subfile{\main/frontmatter/acknowledgements}
 \subfile{\main/frontmatter/abstract}
-\subfile{\main/frontmatter/contributors_and_funding}
+%\subfile{\main/frontmatter/contributors_and_funding}
 \cleardoublepage
 \addcontentsline{toc}{chapter}{\listfigurename}
 \listoffigures
