--- a/chapter.tex
+++ b/chapter.tex
@@ -2,8 +2,33 @@
 \providecommand{\main}{.} 
 \usepackage{\main/UofRdissertation}
 \begin{document}
+\frontmatter
+\doublespacing
+\pagestyle{uofrthesis}
+\subfile{\main/frontmatter/title}
+\subfile{\main/frontmatter/dedication}
+\tableofcontents
+%\subfile{\main/frontmatter/biography}
+\subfile{\main/frontmatter/acknowledgements}
+\subfile{\main/frontmatter/abstract}
+%\subfile{\main/frontmatter/contributors_and_funding}
+\cleardoublepage
+\addcontentsline{toc}{chapter}{\listfigurename}
+\listoffigures
+\mainmatter
 
-
+%chapters:
+\doublespacing
+\subfile{\main/chapters/1 - introduction}
 \subfile{\main/chapters/2 - theoretical background}
+\subfile{\main/chapters/3 - thesis aims}
+\subfile{\main/chapters/4 - methods and results}
+\subfile{\main/chapters/5 - summary and conclusion}
 
+
+
+
+\cleardoublepage
+\addcontentsline{toc}{chapter}{Bibliography}
+\bibliography{citations}
 \end{document}
