--- a/citations.bib
+++ b/citations.bib
@@ -34,3 +34,671 @@
   year={1905},
   publisher={Wiley Online Library}
 }
+
+
+
+
+
+
+
+
+
+
+
+
+@Article{jordan2015heisenberg,
+author="Jordan, Andrew N.
+and Tollaksen, Jeff
+and Troupe, James E.
+and Dressel, Justin
+and Aharonov, Yakir",
+title="Heisenberg scaling with weak measurement: a quantum state discrimination point of view",
+journal="Quantum Studies: Mathematics and Foundations",
+year="2015",
+month="Apr",
+day="01",
+volume="2",
+number="1",
+pages="5--15",
+abstract="We examine the results of the paper ``Precision metrology using weak measurements'' (Zhang et al.                   arXiv:1310.5302                                  , 2013) from a quantum state discrimination point of view. The Heisenberg scaling of the photon number for the precision of the interaction parameter between coherent light and a spin one-half particle (or pseudo-spin) has a simple interpretation in terms of the interaction rotating the quantum state to an orthogonal one. To achieve this scaling, the information must be extracted from the spin rather than from the coherent state of light, limiting the applications of the method to phenomena such as cross-phase modulation. We next investigate the effect of dephasing noise and show a rapid degradation of precision, in agreement with general results in the literature concerning Heisenberg scaling metrology. We also demonstrate that a von Neumann-type measurement interaction can display a similar effect with no system/meter entanglement.",
+issn="2196-5617",
+doi="10.1007/s40509-015-0036-8",
+url="https://doi.org/10.1007/s40509-015-0036-8"
+}
+
+@phdthesis{turner2018development,
+  title={Development of new technologies for precision torsion-balance experiments},
+  author={Turner, Matthew David},
+  url = {https://digital.lib.washington.edu/researchworks/handle/1773/40958?show=full},
+  year={2018}
+}
+
+@article{Aharonov88,
+  title = {How the result of a measurement of a component of the spin of a spin-1/2 particle can turn out to be 100},
+  author = {Aharonov, Yakir and Albert, David Z. and Vaidman, Lev},
+  journal = {Phys. Rev. Lett.},
+  volume = {60},
+  issue = {14},
+  pages = {1351--1354},
+  numpages = {0},
+  year = {1988},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.60.1351},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.60.1351}
+}
+
+@article{Ritchie91,
+  title = {{Realization of a measurement of a `weak value'}},
+  author = {Ritchie, N. W. M. and Story, J. G. and Hulet, Randall G.},
+  journal = {Phys. Rev. Lett.},
+  volume = {66},
+  issue = {9},
+  pages = {1107--1110},
+  numpages = {0},
+  year = {1991},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.66.1107},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.66.1107}
+}
+
+@article {Hosten08,
+	author = {Hosten, Onur and Kwiat, Paul},
+	title = {Observation of the Spin Hall Effect of Light via Weak Measurements},
+	volume = {319},
+	number = {5864},
+	pages = {787--790},
+	year = {2008},
+	doi = {10.1126/science.1152697},
+	publisher = {American Association for the Advancement of Science},
+	abstract = {We have detected a spin-dependent displacement perpendicular to the refractive index gradient for photons passing through an air-glass interface. The effect is the photonic version of the spin Hall effect in electronic systems, indicating the universality of the effect for particles of different nature. Treating the effect as a weak measurement of the spin projection of the photons, we used a preselection and postselection technique on the spin state to enhance the original displacement by nearly four orders of magnitude, attaining sensitivity to displacements of \~{}1 angstrom. The spin Hall effect can be used for manipulating photonic angular momentum states, and the measurement technique holds promise for precision metrology.},
+	issn = {0036-8075},
+	URL = {http://science.sciencemag.org/content/319/5864/787},
+	journal = {Science}
+}
+
+@article{Dixon09,
+  title = {Ultrasensitive Beam Deflection Measurement via Interferometric Weak Value Amplification},
+  author = {Dixon, P. Ben and Starling, David J. and Jordan, Andrew N. and Howell, John C.},
+  journal = {Phys. Rev. Lett.},
+  volume = {102},
+  issue = {17},
+  pages = {173601},
+  numpages = {4},
+  year = {2009},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.102.173601},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.102.173601}
+}
+
+@article{knee2014amplification,
+  title = {When Amplification with Weak Values Fails to Suppress Technical Noise},
+  author = {Knee, George C. and Gauger, Erik M.},
+  journal = {Phys. Rev. X},
+  volume = {4},
+  issue = {1},
+  pages = {011032},
+  numpages = {13},
+  year = {2014},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevX.4.011032},
+  url = {https://link.aps.org/doi/10.1103/PhysRevX.4.011032}
+}
+
+@article{kasevich2014prospects,
+  title={{Prospects for improved accuracy in the determination of G using atom interferometry}},
+  author={Kasevich, Mark and Donnelly, Christine and Overstreet, Chris},
+  journal={Depts. of Physics, Applied Physics and EE Stanford University},
+  year={2014},
+  url  ={https://pdfs.semanticscholar.org/presentation/3a8d/94dcb6fcd7c381e2b51787d7e5e39438a6c5.pdf}
+}
+
+@article{PhysRevA.91.033629,
+  title = {Testing gravity with cold-atom interferometers},
+  author = {Biedermann, G. W. and Wu, X. and Deslauriers, L. and Roy, S. and Mahadeswaraswamy, C. and Kasevich, M. A.},
+  journal = {Phys. Rev. A},
+  volume = {91},
+  issue = {3},
+  pages = {033629},
+  numpages = {10},
+  year = {2015},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.91.033629},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.91.033629}
+}
+
+@article{Starling2010continuous,
+  title = {{Continuous phase amplification with a Sagnac interferometer}},
+  author = {Starling, David J. and Dixon, P. Ben and Williams, Nathan S. and Jordan, Andrew N. and Howell, John C.},
+  journal = {Phys. Rev. A},
+  volume = {82},
+  issue = {1},
+  pages = {011802},
+  numpages = {4},
+  year = {2010},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.82.011802},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.82.011802}
+}
+
+@article{Steinberg10,
+  title={Quantum measurement: A light touch},
+  author={Steinberg, Aephraim M.},
+  journal={Nature},
+  volume={463},
+  number={7283},
+  pages={890},
+  year={2010},
+  url = {https://www.nature.com/articles/463890a},
+  publisher={Nature Publishing Group}
+}
+
+@article{Martinez17,
+author = {Juli\'{a}n Mart\'{i}nez-Rinc\'{o}n and Christopher A. Mullarkey and Gerardo I. Viza and Wei-Tao Liu and John C. Howell},
+journal = {Opt. Lett.},
+keywords = {Metrology; Phase measurement; Quantum information and processing ; Atomic force microscopy; Bandpass filters; Frequency filtering; Homodyne detection; Interferometry; Laser beams},
+number = {13},
+pages = {2479--2482},
+publisher = {OSA},
+title = {Ultrasensitive inverse weak-value tilt meter},
+volume = {42},
+month = {Jul},
+year = {2017},
+url = {http://ol.osa.org/abstract.cfm?URI=ol-42-13-2479},
+doi = {10.1364/OL.42.002479},
+abstract = {We present an interferometric technique for measuring ultrasmall tilts. The information of a tilt in one of the mirrors of a modified Sagnac interferometer is carried by the phase difference between the counter-propagating laser beams. Using a small misalignment of the interferometer, orthogonal to the plane of the tilt, a bimodal (or two-fringe) pattern is induced in the beam's transverse power distribution. By tracking the mean of such a distribution, using a split detector, a sensitive measurement of the phase is performed. With 1.2mW of continuous-wave laser power, the technique has a shot noise limited sensitivity of 56  frad/Hz and a measured noise floor of 200  frad/Hz for tilt frequencies above 2Hz. A tilt of 200 frad corresponds to a differential displacement of 4.0fm in our setup. The novelty of the protocol relies on signal amplification due to the misalignment and on good performance at low frequencies. A noise floor of about 70  prad/Hz is observed between 2 and 100mHz.},
+}
+
+@article{Starling09,
+  title = {Optimizing the signal-to-noise ratio of a beam-deflection measurement with interferometric weak values},
+  author = {Starling, David J. and Dixon, P. Ben and Jordan, Andrew N. and Howell, John C.},
+  journal = {Phys. Rev. A},
+  volume = {80},
+  issue = {4},
+  pages = {041803},
+  numpages = {4},
+  year = {2009},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.80.041803},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.80.041803}
+}
+
+@article{Jordan14,
+  title = {Technical Advantages for Weak-Value Amplification: When Less Is More},
+  author = {Jordan, Andrew N. and Mart\'{\i}nez-Rinc\'on, Juli\'an and Howell, John C.},
+  journal = {Phys. Rev. X},
+  volume = {4},
+  issue = {1},
+  pages = {011031},
+  numpages = {11},
+  year = {2014},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevX.4.011031},
+  url = {https://link.aps.org/doi/10.1103/PhysRevX.4.011031}
+}
+
+@article{Viza15,
+  title = {Experimentally quantifying the advantages of weak-value-based metrology},
+  author = {Viza, Gerardo I. and Mart\'{\i}nez-Rinc\'on, Juli\'an and Alves, Gabriel B. and Jordan, Andrew N. and Howell, John C.},
+  journal = {Phys. Rev. A},
+  volume = {92},
+  issue = {3},
+  pages = {032127},
+  numpages = {10},
+  year = {2015},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.92.032127},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.92.032127}
+}
+
+@article{Brunner10,
+  title = {Measuring Small Longitudinal Phase Shifts: Weak Measurements or Standard Interferometry?},
+  author = {Brunner, Nicolas and Simon, Christoph},
+  journal = {Phys. Rev. Lett.},
+  volume = {105},
+  issue = {1},
+  pages = {010405},
+  numpages = {4},
+  year = {2010},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.105.010405},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.105.010405}
+}
+
+@article{Dressel14,
+  title={Colloquium: Understanding quantum weak values: Basics and applications},
+  author={Dressel, Justin and Malik, Mehul and Miatto, Filippo M and Jordan, Andrew N and Boyd, Robert W},
+  journal={Reviews of Modern Physics},
+  volume={86},
+  number={1},
+  pages={307},
+  year={2014},
+  publisher={APS}
+}
+
+@article{Wahr04,
+author = {John Wahr and Sean Swenson and Victor Zlotnicki and Isabella Velicogna},
+title = {{Time-variable gravity from GRACE: First results}},
+journal = {Geophysical Research Letters},
+volume = {31},
+number = {11},
+pages = {},
+url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2004GL019779},
+abstract = {Eleven monthly GRACE gravity field solutions are now available for analyses. We show those fields can be used to recover monthly changes in water storage, both on land and in the ocean, to accuracies of 1.5 cm of water thickness when smoothed over 1000 km. The amplitude of the annually varying signal can be determined to 1.0 cm. Results are 30\% better for a 1500 km smoothing radius, and 40\% worse for a 750 km radius. We estimate the annually varying component of water storage for three large drainage basins (the Mississippi, the Amazon, and a region draining into the Bay of Bengal), to accuracies of 1.0–1.5 cm.}
+}
+
+@inproceedings{Bingham10,
+  title={{Using GOCE to estimate the mean North Atlantic circulation}},
+  author={Bingham, R. J. and Knudsen, P. and Andersen, O. B. and Pail, R.},
+  booktitle={AGU Fall Meeting Abstracts},
+  url = {http://abstractsearch.agu.org/meetings/2010/FM/G33B-08.html},
+  year={2010}
+}
+
+@article{Bell98,
+author = {Bell, Robin E. and Hansen, R. O.},
+title = {The rise and fall of early oil field technology; the torsion balance gradiometer},
+journal = {The Leading Edge},
+volume = {17},
+number = {1},
+pages = {81},
+year = {1998},
+doi = {},
+URL = {http://dx.doi.org/}
+}
+
+@article{Leeuwen00,
+author = {van Leeuwen, Edwin H.},
+title = {{BHP develops airborne gravity gradiometer for mineral exploration}},
+journal = {The Leading Edge},
+volume = {19},
+number = {12},
+pages = {1296},
+year = {2000},
+doi = {10.1190/1.1438526},
+URL = {http://dx.doi.org/10.1190/1.1438526}
+}
+
+@inproceedings{Diorio03,
+  title={{Examples of the application of airborne gravity gradiometry to natural resource exploration}},
+  author={Diorio, P. and Mahanta, A. and Rose, M. and Lockhart, G.},
+  booktitle={Geophysical Research Abstracts},
+  volume={5},
+  pages={03996},
+  year={2003}
+}
+
+@article{Romaides01,
+  title={A comparison of gravimetric techniques for measuring subsurface void signals},
+  author={Romaides, Anestis J. and Battis, James C. and Sands, Roger W. and Zorn, Alan and Benson Jr., Donald O. and DiFrancesco, Daniel J.},
+  journal={Journal of Physics D: Applied Physics},
+  volume={34},
+  number={3},
+  pages={433},
+  year={2001},
+  url = {http://iopscience.iop.org/article/10.1088/0022-3727/34/3/331/meta},
+  publisher={IOP Publishing}
+}
+
+@article{Peters01,
+  author={A. Peters and K. Y. Chung and S. Chu},
+  title={High-precision gravity measurements using atom interferometry},
+  journal={Metrologia},
+  volume={38},
+  number={1},
+  pages={25},
+  url={http://stacks.iop.org/0026-1394/38/i=1/a=4},
+  year={2001},
+  abstract={We have built an atom interferometer that can measure g , the local acceleration due to gravity, with a resolution of Δ g / g = 2 × 10 −8 after a single 1.3 s measurement cycle, 3 × 10 −9 after 1 min and 1 × 10 −10 after two days of integration time. The difference between our value for g and one obtained by a falling corner-cube optical interferometer is (7 ± 7) × 10 −9 g . The atom interferometer uses velocity-selective stimulated Raman transitions and laser-cooled caesium atoms in an atomic fountain. We extend previous methods of analysing the interferometer to include the effects of a gravitational gradient. We also present detailed experimental and theoretical studies of potential systematic errors and noise sources.}
+}
+
+@article{Imanishi04,
+  title={A network of superconducting gravimeters detects submicrogal coseismic gravity changes},
+  author={Imanishi, Yuichi and Sato, Tadahiro and Higashi, Toshihiro and Sun, Wenke and Okubo, Shuhei},
+  journal={Science},
+  volume={306},
+  number={5695},
+  pages={476--478},
+  year={2004},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{Luther82,
+  title = {Redetermination of the Newtonian Gravitational Constant $G$},
+  author = {Luther, Gabriel G. and Towler, William R.},
+  journal = {Phys. Rev. Lett.},
+  volume = {48},
+  issue = {3},
+  pages = {121--123},
+  numpages = {0},
+  year = {1982},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.48.121},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.48.121}
+}
+
+@article{Kuroda95,
+  title = {Does the Time-of-Swing Method Give a Correct Value of the Newtonian Gravitational Constant?},
+  author = {Kuroda, Kazuaki},
+  journal = {Phys. Rev. Lett.},
+  volume = {75},
+  issue = {15},
+  pages = {2796--2798},
+  numpages = {0},
+  year = {1995},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.75.2796},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.75.2796}
+}
+
+@article{Karagioz96,
+  title= {{Measurement of the gravitational constant with a torsion balance}},
+  author={Karagioz, O. V. },
+  journal={Meas. Tech.},
+  volume={39},
+  pages={979},
+  url = {https://link.springer.com/article/10.1007/BF02377461},
+  year={1996}
+}
+
+@article{Bagley97,
+  title = {{Preliminary Results of a Determination of the Newtonian Constant of Gravitation: A Test of the Kuroda Hypothesis}},
+  author = {Bagley, Charles H. and Luther, Gabriel G.},
+  journal = {Phys. Rev. Lett.},
+  volume = {78},
+  issue = {16},
+  pages = {3047--3050},
+  numpages = {0},
+  year = {1997},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.78.3047},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.78.3047}
+}
+
+@article{Goodkind99,
+author = {Goodkind,John M. },
+title = {The superconducting gravimeter},
+journal = {Review of Scientific Instruments},
+volume = {70},
+number = {11},
+pages = {4131-4152},
+year = {1999},
+doi = {10.1063/1.1150092},
+URL = {https://doi.org/10.1063/1.1150092 }}}
+
+@article{Gundlach00,
+  title = {{Measurement of Newton's constant using a torsion balance with angular acceleration feedback}},
+  author = {Gundlach, Jens H. and Merkowitz, Stephen M.},
+  journal = {Phys. Rev. Lett.},
+  volume = {85},
+  issue = {14},
+  pages = {2869--2872},
+  numpages = {0},
+  year = {2000},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.85.2869},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.85.2869}
+}
+
+@article{Quinn01,
+  title = {A New Determination of $\mathit{G}$ Using Two Methods},
+  author = {Quinn, T. J. and Speake, C. C. and Richman, S. J. and Davis, R. S. and Picard, A.},
+  journal = {Phys. Rev. Lett.},
+  volume = {87},
+  issue = {11},
+  pages = {111101},
+  numpages = {4},
+  year = {2001},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.87.111101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.87.111101}
+}
+
+@article{Armstrong03,
+  title = {New Measurements of $G$ Using the Measurement Standards Laboratory Torsion Balance},
+  author = {Armstrong, T. R. and Fitzgerald, M. P.},
+  journal = {Phys. Rev. Lett.},
+  volume = {91},
+  issue = {20},
+  pages = {201101},
+  numpages = {4},
+  year = {2003},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.91.201101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.91.201101}
+}
+
+@article{Kleinevoss99,
+  author={U. Kleinevo\ss and H. Meyer and A. Schumacher and S. Hartmann},
+  title={{Absolute measurement of the Newtonian force and a determination of G}},
+  journal={Measurement Science and Technology},
+  volume={10},
+  number={6},
+  pages={492},
+  url={http://stacks.iop.org/0957-0233/10/i=6/a=313},
+  year={1999},
+  abstract={We present the status and preliminary results of the Wuppertal gravitational experiment which is based on a microwave resonator. The gravitational force of two test masses acting on the resonator is measured as a function of distance. From new data taken recently we determine the gravitational constant G and test Newton's inverse square law in a distance range between 0.7 m and 2.2 m. From our measurements we obtain a preliminary value for G = 6.6735 × 10 -11 m 3 kg -1 s -2 with an uncertainty of 432 ppm dominated by systematic considerations.}
+}
+
+@article{Peters99,
+  title={Measurement of gravitational acceleration by dropping atoms},
+  author={Peters, Achim and Chung, Keng Yeow and Chu, Steven},
+  journal={Nature},
+  volume={400},
+  number={6747},
+  pages={849},
+  year={1999},
+  url = {https://www.nature.com/articles/23655},
+  publisher={Nature Publishing Group}
+}
+
+@article{Mcguirk02,
+  title = {Sensitive absolute-gravity gradiometry using atom interferometry},
+  author = {McGuirk, J. M. and Foster, G. T. and Fixler, J. B. and Snadden, M. J. and Kasevich, M. A.},
+  journal = {Phys. Rev. A},
+  volume = {65},
+  issue = {3},
+  pages = {033608},
+  numpages = {14},
+  year = {2002},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.65.033608},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.65.033608}
+}
+
+@article{Dimopoulos07,
+  title = {Testing General Relativity with Atom Interferometry},
+  author = {Dimopoulos, Savas and Graham, Peter W. and Hogan, Jason M. and Kasevich, Mark A.},
+  journal = {Phys. Rev. Lett.},
+  volume = {98},
+  issue = {11},
+  pages = {111102},
+  numpages = {4},
+  year = {2007},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.98.111102},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.98.111102}
+}
+
+@article{Lamporesi08,
+  title = {{Determination of the Newtonian gravitational constant using atom interferometry}},
+  author = {Lamporesi, G. and Bertoldi, A. and Cacciapuoti, L. and Prevedelli, M. and Tino, G. M.},
+  journal = {Phys. Rev. Lett.},
+  volume = {100},
+  issue = {5},
+  pages = {050801},
+  numpages = {4},
+  year = {2008},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.100.050801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.100.050801}
+}
+
+@article{Sorrentino10,
+  title={Sensitive gravity-gradiometry with atom interferometry: progress towards an improved determination of the gravitational constant},
+  author={Sorrentino, F. and Lien, Y. H. and Rosi, G. and Cacciapuoti, L. and Prevedelli, M. and Tino, G. M. },
+  journal={New Journal of Physics},
+  volume={12},
+  number={9},
+  pages={095009},
+  year={2010},
+  url={http://iopscience.iop.org/article/10.1088/1367-2630/12/9/095009/meta},
+  publisher={IOP Publishing}
+}
+
+@article{Parks10,
+  title = {Simple Pendulum Determination of the Gravitational Constant},
+  author = {Parks, Harold V. and Faller, James E.},
+  journal = {Phys. Rev. Lett.},
+  volume = {105},
+  issue = {11},
+  pages = {110801},
+  numpages = {4},
+  year = {2010},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.105.110801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.105.110801}
+}
+
+@article{Rosi14,
+  title={{Precision measurement of the Newtonian gravitational constant using cold atoms}},
+  author={Rosi, G. and Sorrentino, F. and Cacciapuoti, L. and Prevedelli, M. and Tino, G. M.},
+  journal={Nature},
+  volume={510},
+  number={7506},
+  pages={518},
+  year={2014},
+  url={https://www.nature.com/articles/nature13433},
+  publisher={Nature Publishing Group}
+}
+
+@article{pang2016protecting,
+  title = {Protecting weak measurements against systematic errors},
+  author = {Pang, Shengshi and Alonso, Jose Raul Gonzalez and Brun, Todd A. and Jordan, Andrew N.},
+  journal = {Phys. Rev. A},
+  volume = {94},
+  issue = {1},
+  pages = {012329},
+  numpages = {8},
+  year = {2016},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.94.012329},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.94.012329}
+}
+
+@book{newton1687,
+  title={Philosophiae naturalis principia mathematica},
+  author={Newton, I.},
+  url={https://books.google.com/books?id=-dVKAQAAIAAJ},
+  year={1687},
+  publisher={J. Societatis Regiae ac Typis J. Streater}
+}
+
+@article{Feizpour11,
+  title = {Amplifying Single-Photon Nonlinearity Using Weak Measurements},
+  author = {Feizpour, Amir and Xing, Xingxing and Steinberg, Aephraim M.},
+  journal = {Phys. Rev. Lett.},
+  volume = {107},
+  issue = {13},
+  pages = {133603},
+  numpages = {5},
+  year = {2011},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.107.133603},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.107.133603}
+}
+
+@article{sinclair2017weak,
+  title = {Weak-value amplification and optimal parameter estimation in the presence of correlated noise},
+  author = {Sinclair, Josiah and Hallaji, Matin and Steinberg, Aephraim M. and Tollaksen, Jeff and Jordan, Andrew N.},
+  journal = {Phys. Rev. A},
+  volume = {96},
+  issue = {5},
+  pages = {052128},
+  numpages = {12},
+  year = {2017},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.96.052128},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.96.052128}
+}
+
+@Article{Lyons2017,
+author="Lyons, Kevin
+and Howell, John C.
+and Jordan, Andrew N.",
+title="Noise suppression in inverse weak value-based phase detection",
+journal="Quantum Studies: Mathematics and Foundations",
+year="2017",
+month="Oct",
+day="26",
+abstract="We examine the effect of different sources of technical noise on inverse weak value-based precision phase measurements. We find that this type of measurement is similarly robust to technical noise as related experiments in the weak value regime. In particular, the measurements considered here are robust to additive Gaussian white noise and angular jitter noise commonly encountered in optical experiments. Additionally, we show the same techniques used for precision phase measurement can be used with the same technical advantages for optical frequency measurements.",
+issn="2196-5617",
+url="https://doi.org/10.1007/s40509-017-0145-7",
+volume = {5},
+issue = {4},
+pages = {579-588}
+}
+
+@article{Dressel2013,
+  title = {Strengthening weak-value amplification with recycled photons},
+  author = {Dressel, Justin and Lyons, Kevin and Jordan, Andrew N. and Graham, Trent M. and Kwiat, Paul G.},
+  journal = {Phys. Rev. A},
+  volume = {88},
+  issue = {2},
+  pages = {023821},
+  numpages = {12},
+  year = {2013},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.88.023821},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.88.023821}
+}
+
+@article{Lyons2015,
+  title = {Power-Recycled Weak-Value-Based Metrology},
+  author = {Lyons, Kevin and Dressel, Justin and Jordan, Andrew N. and Howell, John C. and Kwiat, Paul G.},
+  journal = {Phys. Rev. Lett.},
+  volume = {114},
+  issue = {17},
+  pages = {170801},
+  numpages = {5},
+  year = {2015},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.114.170801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.114.170801}
+}
+
+@article{Ciani2017,
+author = {Ciani,Giacomo  and Chilton,Andrew  and Apple,Stephen  and Olatunde,Taiwo  and Aitken,Michael  and Mueller,Guido  and Conklin,John W. },
+title = {A new torsion pendulum for gravitational reference sensor technology development},
+journal = {Review of Scientific Instruments},
+volume = {88},
+number = {6},
+pages = {064502},
+year = {2017},
+doi = {10.1063/1.4985543},
+URL = {https://doi.org/10.1063/1.4985543} 
+}
