--- a/citations.bib
+++ b/citations.bib
@@ -34,15 +34,17 @@
   year={1905},
   publisher={Wiley Online Library}
 }
-@article{einstein19052tragheit,
-  title={Ist die Tr{\"a}gheit eines K{\"o}rpers von seinem Energieinhalt abh{\"a}ngig?},
-  author={Einstein, Albert},
-  journal={Annalen der Physik},
-  volume={323},
-  number={13},
-  pages={639--641},
-  year={1905},
-  publisher={Wiley Online Library}
+
+
+@article{jordan2015heisenberg,
+  title={},
+  author={},
+  journal={},
+  volume={},
+  number={},
+  pages={},
+  year={},
+  publisher={}
 }
 
 
