--- a/citations.bib
+++ b/citations.bib
@@ -26,13 +26,7 @@
 
 @article{einstein1905tragheit,
   title={Ist die Tr{\"a}gheit eines K{\"o}rpers von seinem Energieinhalt abh{\"a}ngig?},
-  author={Einstein, Albert},
-  journal={Annalen der Physik},
-  volume={323},
-  number={13},
-  pages={639--641},
-  year={1905},
-  publisher={Wiley Online Library}
+  author={Einstein, Albert}
 }
 
 
