--- a/citations.bib
+++ b/citations.bib
@@ -37,7 +37,11 @@
 
 @article{jordan2015heisenberg,
   title={Ist die Tr{\"a}gheit eines K{\"o}rpers von seinem Energieinhalt abh{\"a}ngig?},
-  author={Einstein, Albert},
+  author={Jordan, Andrew N.
+and Tollaksen, Jeff
+and Troupe, James E.
+and Dressel, Justin
+and Aharonov, Yakir},
   journal={Annalen der Physik},
   volume={323},
   number={13},
@@ -47,16 +51,7 @@
 }
 
 
-@article{jordan2015heisenberg,
-  title={},
-  author={},
-  journal={},
-  volume={},
-  number={},
-  pages={},
-  year={},
-  publisher={}
-}
+
 
 
 
