--- a/citations.bib
+++ b/citations.bib
@@ -37,11 +37,11 @@
 
 @article{jordan2015heisenberg,
   title={Ist die Tr{\"a}gheit eines K{\"o}rpers von seinem Energieinhalt abh{\"a}ngig?},
-  author={Jordan, Andrew N.
+  author="Jordan, Andrew N.
 and Tollaksen, Jeff
 and Troupe, James E.
 and Dressel, Justin
-and Aharonov, Yakir},
+and Aharonov, Yakir",
   journal={Annalen der Physik},
   volume={323},
   number={13},
