--- a/frontmatter/title.tex
+++ b/frontmatter/title.tex
@@ -12,7 +12,7 @@
    \vfill
    by\par
    \vfill
-   Christopher A. Mullarkey\par
+   Yishai Arieli\par
    \vspace{1.5in}
    Submitted in partial fulfillment of the requirements for the degree of\par
    \vfill
