--- a/frontmatter/title.tex
+++ b/frontmatter/title.tex
@@ -6,7 +6,7 @@
 \begin{titlepage}
 \doublespacing
 \begin{center}
-  {\titlefont My Awesome\par \vspace{10 mm}
+  {\titlefont Gravity Sensing Using WeakValues\par \vspace{10 mm}
    Dissertation \par \vspace{10 mm}
    Title}
    \vfill
@@ -19,7 +19,7 @@
    Doctor of Philosophy\par
    \vfill
    Supervised by\par
-   Professor McProfessor\par
+   Professor John Howell\par
    \vspace{1.5in}
    Department of Physics and Astronomy\par
    Arts, Sciences, and Engineering\par
