--- a/chapter.tex
+++ b/chapter.tex
@@ -4,10 +4,10 @@
 \begin{document}
 
 
-\subfile{\main/chapters/3 - thesis aims}
+\subfile{\main/chapters/4 - methods and results}
 
 
 
 
-\
+
 \end{document}
