--- a/citations.bib
+++ b/citations.bib
@@ -659,9 +659,11 @@ URL = {https://doi.org/10.1063/1.4985543}
 
 
 
-
-
-
+@article{underdamped-system,
+author = {Simon P. Neill, M. Reza Hashemi },
+title = {Underdamped System; Wave Energy},
+url="https://www.sciencedirect.com/topics/engineering/underdamped-system", 
+}
 
 
 
