--- a/citations.bib
+++ b/citations.bib
@@ -665,6 +665,11 @@ title = {Underdamped System; Wave Energy},
 url="https://www.sciencedirect.com/topics/engineering/underdamped-system", 
 }
 
+@article{PID-diagram,
+author = {Ravi Kansagara},
+title = {PID Controllers: Working, Structure and Tuning Methods},
+url="https://circuitdigest.com/article/what-is-pid-controller-working-structure-applications", 
+}
 
 
 
