--- a/citations.bib
+++ b/citations.bib
@@ -663,11 +663,13 @@ URL = {https://doi.org/10.1063/1.4985543}
 author = {Simon P. Neill, M. Reza Hashemi },
 title = {Underdamped System; Wave Energy},
 url="https://www.sciencedirect.com/topics/engineering/underdamped-system", 
+year = {2018},
 }
 
 @article{PID-diagram,
 author = {Ravi Kansagara},
 title = {PID Controllers: Working, Structure and Tuning Methods},
+year = {2018},
 url="https://circuitdigest.com/article/what-is-pid-controller-working-structure-applications", 
 }
 
