--- a/citations.bib
+++ b/citations.bib
@@ -673,7 +673,16 @@ year = {2018},
 url="https://circuitdigest.com/article/what-is-pid-controller-working-structure-applications", 
 }
 
-
+@article{howell2019,
+  title = {Gravitational sensing with weak value based optical sensors},
+  author = {Andrew N. Jordan, Philippe Lewalle, Jeff Tollaksen and John C. Howell},
+  /journal = {Quantum Stud.: Math. Found.},
+  volume = {6},
+  pages = {169–180},
+  year = {2019},
+  doi = {10.1103/PhysRevLett.114.170801},
+  url = {https://doi.org/10.1007/s40509-018-0175-9}
+}
 
 
 
