--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -50,7 +50,8 @@ inner=1.25in]{geometry}
 %So we can build chapters independently if desired
 \usepackage{subfiles} 
 
-
 \usepackage{cite}
 \usepackage{placeins}
-
+%\usepackage{amssymb}
+\usepackage[ampersand]{easylist}
+\ListProperties(Hide=100, Hang=true, Progressive=3ex, Style*=$\bullet$ ,Style2*=$\circ$ ,Style3*=\tiny$\blacksquare$, Style4*=-- )
