--- a/citations.bib
+++ b/citations.bib
@@ -684,6 +684,13 @@ url="https://circuitdigest.com/article/what-is-pid-controller-working-structure-
   url = {https://doi.org/10.1007/s40509-018-0175-9}
 }
 
+@article{ASSDA,
+  title = {ASSDA Technical FAQ No 3 “Magnetic effects of stainless steels”},
+  author = {Australian Stainless Steel Development Association },
+  
+  url = {http://www.stealth316.com/misc/stainless_steel/stainless-steel_magnetic-effects.pdf}
+}
+
 
 
 
