--- a/citations.bib
+++ b/citations.bib
@@ -684,14 +684,19 @@ url="https://circuitdigest.com/article/what-is-pid-controller-working-structure-
   url = {https://doi.org/10.1007/s40509-018-0175-9}
 }
 
-@article{ASSDA,
+@article{SS316,
   title = {ASSDA Technical FAQ No 3 “Magnetic effects of stainless steels”},
   author = {Australian Stainless Steel Development Association },
   
   url = {http://www.stealth316.com/misc/stainless_steel/stainless-steel_magnetic-effects.pdf}
 }
 
-
+@article{tungsten,
+  title = {AZO MATERIALS; Tungsten Datasheet},
+  author = {AZO MATERIALS},
+  
+  url = {https://www.azom.com/properties.aspx?ArticleID=614}
+}
 
 
 
