--- a/master.tex
+++ b/master.tex
@@ -5,12 +5,12 @@
 \frontmatter
 \doublespacing
 \pagestyle{uofrthesis}
-\subfile{\main/frontmatter/title}
-\subfile{\main/frontmatter/dedication}
+%\subfile{\main/frontmatter/title}
+%\subfile{\main/frontmatter/dedication}
 \tableofcontents
 %\subfile{\main/frontmatter/biography}
-\subfile{\main/frontmatter/acknowledgements}
-\subfile{\main/frontmatter/abstract}
+%\subfile{\main/frontmatter/acknowledgements}
+%\subfile{\main/frontmatter/abstract}
 %\subfile{\main/frontmatter/contributors_and_funding}
 \cleardoublepage
 \addcontentsline{toc}{chapter}{\listfigurename}
