--- a/master.tex
+++ b/master.tex
@@ -3,7 +3,9 @@
 \usepackage{\main/UofRdissertation}
 \begin{document}
 \frontmatter
-%\doublespacing
+
+\doublespacing
+\cleardoublepage
 \pagestyle{uofrthesis}
 %\subfile{\main/frontmatter/title}
 %\subfile{\main/frontmatter/dedication}
