--- a/frontmatter/title.tex
+++ b/frontmatter/title.tex
@@ -1,33 +1,29 @@
 \providecommand{\main}{.}
 \documentclass[\main/master.tex]{subfiles}
-
 \begin{document}
 \pagestyle{empty}
 \begin{titlepage}
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[scale=1.5]{\main/images/title/huji.png}
+\end{figure}
 \doublespacing
 \begin{center}
-  {\titlefont My Awesome\par \vspace{10 mm}
-   Dissertation \par \vspace{10 mm}
-   Title}
-   \vfill
+  {\titlefont Optical Gravity Sensing \par \vspace{10 mm}
+   Using Radiation Cooling
+   }
+   \vspace{1in}
+   
    by\par
-   \vfill
-   Christopher A. Mullarkey\par
+   
+   Yishai Arieli\par
+   This research was carried out under the\par
+   supervision of Prof. John Howell\par
    \vspace{1.5in}
-   Submitted in partial fulfillment of the requirements for the degree of\par
-   \vfill
-   Doctor of Philosophy\par
-   \vfill
-   Supervised by\par
-   Professor McProfessor\par
-   \vspace{1.5in}
-   Department of Physics and Astronomy\par
-   Arts, Sciences, and Engineering\par
-   School of Arts and Sciences \par
-   \vfill
-   University of Rochester \par
-   Rochester, New York \par
-   CURRENT YEAR
+   
+   Thesis submitted for Master of Science in\par
+   Applied Physics\par
+   2020
    \end{center}
   \end{titlepage}
 \end{document}
