--- a/master.tex
+++ b/master.tex
@@ -22,6 +22,7 @@
 \doublespacing
 \subfile{\main/chapters/1 - introduction}
 \subfile{\main/chapters/2 - theoretical background}
+\cleardoublepage
 \subfile{\main/chapters/3 - thesis aims}
 \subfile{\main/chapters/4 - methods and results}
 \subfile{\main/chapters/5 - summary and conclusion}
