--- a/master.tex
+++ b/master.tex
@@ -23,8 +23,11 @@
 \subfile{\main/chapters/1 - introduction}
 \let\cleardoublepage\clearpage
 \subfile{\main/chapters/2 - theoretical background}
+\let\cleardoublepage\clearpage
 \subfile{\main/chapters/3 - thesis aims}
+\let\cleardoublepage\clearpage
 \subfile{\main/chapters/4 - methods and results}
+\let\cleardoublepage\clearpage
 \subfile{\main/chapters/5 - summary and conclusion}
 
 
