--- a/master.tex
+++ b/master.tex
@@ -19,7 +19,7 @@
 \mainmatter
 
 %chapters:
-\doublespacing
+%\doublespacing
 \subfile{\main/chapters/1 - introduction}
 \let\cleardoublepage\clearpage
 \subfile{\main/chapters/2 - theoretical background}
