--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -55,3 +55,4 @@ inner=1.25in]{geometry}
 %\usepackage{amssymb}
 \usepackage[ampersand]{easylist}
 \ListProperties(Hide=100, Hang=true, Progressive=3ex, Style*=$\bullet$ ,Style2*=$\circ$ ,Style3*=\tiny$\blacksquare$, Style4*=-- )
+\usepackage{titlesec}
