--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -56,3 +56,5 @@ inner=1.25in]{geometry}
 \usepackage[ampersand]{easylist}
 \ListProperties(Hide=100, Hang=true, Progressive=3ex, Style*=$\bullet$ ,Style2*=$\circ$ ,Style3*=\tiny$\blacksquare$, Style4*=-- )
 \usepackage{titlesec}
+\titleformat{\chapter}{\bfseries\LARGE}{\thechapter~}{0em}{}
+
