--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -57,4 +57,5 @@ inner=1.25in]{geometry}
 \ListProperties(Hide=100, Hang=true, Progressive=3ex, Style*=$\bullet$ ,Style2*=$\circ$ ,Style3*=\tiny$\blacksquare$, Style4*=-- )
 \usepackage{titlesec}
 \titleformat{\chapter}{\bfseries\LARGE}{\thechapter~}{0em}{}
-
+%\titleformat{\chapter}{}{}{0em}{\bf\LARGE}
+\titlespacing*{\chapter}{0pt}{0pt}{40pt}
