--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -58,4 +58,5 @@ inner=1.25in]{geometry}
 \usepackage{titlesec}
 \titleformat{\chapter}{\bfseries\LARGE}{\thechapter~}{0em}{}
 %\titleformat{\chapter}{}{}{0em}{\bf\LARGE}
-\titlespacing*{\chapter}{0pt}{-20pt}{20pt}
+\titlespacing*{\chapter}{0pt}{0pt}{20pt}
+\let\cleardoublepage\clearpage
