--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -56,6 +56,7 @@ inner=1.25in]{geometry}
 \usepackage[ampersand]{easylist}
 \ListProperties(Hide=100, Hang=true, Progressive=3ex, Style*=$\bullet$ ,Style2*=$\circ$ ,Style3*=\tiny$\blacksquare$, Style4*=-- )
 \usepackage{titlesec}
+\titlespacing*{\chapter}{0pt}{0pt}{0pt}
 \titleformat{\chapter}{\bfseries\LARGE}{\thechapter~}{0em}{}
 %\titleformat{\chapter}{}{}{0em}{\bf\LARGE}
 \titlespacing*{\chapter}{0pt}{0pt}{20pt}
