--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -60,3 +60,4 @@ inner=1.25in]{geometry}
 %\titleformat{\chapter}{}{}{0em}{\bf\LARGE}
 \titlespacing*{\chapter}{0pt}{0pt}{20pt}
 \let\cleardoublepage\clearpage
+\usepackage{multicol}
