--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -71,3 +71,6 @@ inner=1.25in]{geometry}
   \vspace{\baselineskip}% ...just a little space
 }
 \makeatother
+
+\setlength\parskip{1em plus 0.1em minus 0.2em}
+\setlength\parindent{0pt}
