--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -61,7 +61,7 @@ inner=1.25in]{geometry}
 %\titleformat{\chapter}{\bfseries\LARGE}{\thechapter~}{0em}{}
 %%\titleformat{\chapter}{}{}{0em}{\bf\LARGE}
 %\titlespacing*{\chapter}{0pt}{0pt}{20pt}
-%\let\cleardoublepage\clearpage
+\let\cleardoublepage\clearpage
 
 
 \makeatletter
