--- a/citations.bib
+++ b/citations.bib
@@ -698,7 +698,16 @@ url="https://circuitdigest.com/article/what-is-pid-controller-working-structure-
   url = {https://www.azom.com/properties.aspx?ArticleID=614}
 }
 
-
+@article{WOODS201444,
+title = "Emissivity of silver and stainless steel from 80K to 300K: Application to ITER thermal shields",
+journal = "Cryogenics",
+volume = "60",
+pages = "44 - 48",
+year = "2014",
+issn = "0011-2275",
+doi = "https://doi.org/10.1016/j.cryogenics.2014.01.002",
+url = "http://www.sciencedirect.com/science/article/pii/S0011227514000101",
+author = "S.I. Woods and T.M. Jung and D.R. Sears and J. Yu",
 
 
 
