--- a/master.tex
+++ b/master.tex
@@ -22,9 +22,9 @@
 %\doublespacing
 \subfile{\main/chapters/1 - introduction}
 \subfile{\main/chapters/2 - theoretical background}
-%\subfile{\main/chapters/3 - thesis aims}
-%\subfile{\main/chapters/4 - methods and results}
-%\subfile{\main/chapters/5 - summary and conclusion}
+\subfile{\main/chapters/3 - thesis aims}
+\subfile{\main/chapters/4 - methods and results}
+\subfile{\main/chapters/5 - summary and conclusion}
 
 
 
