--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -74,3 +74,12 @@ inner=1.25in]{geometry}
 
 \setlength\parskip{0.0em plus 0.01em minus 0.01em}
 \setlength\parindent{0pt}
+
+\usepackage[compact]{titlesec}
+\usepackage{paralist}
+\newcommand{\newspacing}{
+\setlength\intextsep{0pt}
+\titlespacing{\section}{0pt}{2ex}{1ex}
+\titlespacing{\subsection}{0pt}{1ex}{0ex}
+\titlespacing{\subsubsection}{0pt}{0.5ex}{0ex}
+}
