--- a/master.tex
+++ b/master.tex
@@ -24,7 +24,7 @@
 \subfile{\main/chapters/2 - theoretical background}
 \subfile{\main/chapters/3 - thesis aims}
 \subfile{\main/chapters/4 - methods and results}
-%\subfile{\main/chapters/5 - summary and conclusion}
+\subfile{\main/chapters/5 - summary and conclusion}
 \end{spacing}
 
 
