--- a/master.tex
+++ b/master.tex
@@ -15,7 +15,7 @@
 %\subfile{\main/frontmatter/contributors_and_funding}
 \cleardoublepage
 %\addcontentsline{toc}{chapter}{\listfigurename}
-\listoffigures
+%\listoffigures
 \mainmatter
 
 \begin{spacing}{1.5}
