--- a/master.tex
+++ b/master.tex
@@ -9,6 +9,8 @@
 \subfile{\main/frontmatter/title}
 \subfile{\main/frontmatter/dedication}
 \tableofcontents
+\singlespacing
+
 %\subfile{\main/frontmatter/biography}
 %\subfile{\main/frontmatter/acknowledgements}
 %\subfile{\main/frontmatter/abstract}
