--- a/master.tex
+++ b/master.tex
@@ -9,6 +9,7 @@
 \subfile{\main/frontmatter/title}
 \subfile{\main/frontmatter/dedication}
 \singlespacing
+\newspacing
 \tableofcontents
 
 %\subfile{\main/frontmatter/biography}
