--- a/master.tex
+++ b/master.tex
@@ -8,8 +8,9 @@
 \pagestyle{uofrthesis}
 \subfile{\main/frontmatter/title}
 \subfile{\main/frontmatter/dedication}
+
 \singlespacing
-\newspacing
+\vspace{-5em}
 \tableofcontents
 
 %\subfile{\main/frontmatter/biography}
