--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -107,3 +107,6 @@ inner=1.25in]{geometry}
 \titlespacing{\subsubsection}{0pt}{0.5ex}{0ex}
 }
 
+\usepackage{tocloft}
+\setlength{\cftbeforetoctitleskip}{-3em}
+
