--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -107,6 +107,8 @@ inner=1.25in]{geometry}
 \titlespacing{\subsubsection}{0pt}{0.5ex}{0ex}
 }
 
+
+%table of contents-
 \usepackage{tocloft}
 \setlength{\cftbeforetoctitleskip}{-3em}
 
