--- a/master.tex
+++ b/master.tex
@@ -37,5 +37,6 @@
 
 \cleardoublepage
 \addcontentsline{toc}{chapter}{Bibliography}
+\bibliographystyle{unsrt}
 \bibliography{citations}
 \end{document}
