--- a/master.tex
+++ b/master.tex
@@ -36,6 +36,15 @@
 
 
 \cleardoublepage
+\def\@makeschapterhead#1{%                                                                                              
+  \vspace*{50\p@}%                                                                                                      
+  {\parindent \z@ \raggedright
+    \normalfont
+    \interlinepenalty\@M
+    \Huge \bfseries  #1\par\nobreak                                                                                     
+    \vskip 40\p@                                                                                                        
+  }}
+
 \addcontentsline{toc}{chapter}{Bibliography}  
 \bibliography{citations}
 \end{document}
