--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -112,3 +112,5 @@ inner=1.25in]{geometry}
 \usepackage{tocloft}
 \setlength{\cftbeforetoctitleskip}{-3em}
 
+\usepackage{natbib}
+\usepackage{etoolbox}
