--- a/master.tex
+++ b/master.tex
@@ -37,12 +37,7 @@
 
 \cleardoublepage
 
-\makeatletter
-    \patchcmd{\@makeschapterhead}{\vskip40}{\vskip40}{}{} % change 10 to something else, if you prefer
-\makeatother
-
-\bibliographystyle{plainnat}
-
+\newspacing
 \addcontentsline{toc}{chapter}{Bibliography}  
 \bibliography{citations}
 \end{document}
