--- a/master.tex
+++ b/master.tex
@@ -37,7 +37,7 @@
 
 \cleardoublepage
 
-\newspacing
+\vspace{-10em}
 \addcontentsline{toc}{chapter}{Bibliography}  
 \bibliography{citations}
 \end{document}
