--- a/master.tex
+++ b/master.tex
@@ -37,7 +37,7 @@
 
 \cleardoublepage
 
-\vspace{-10em}
-\addcontentsline{toc}{chapter}{Bibliography}  
+\addcontentsline{toc}{chapter}{Bibliography}
+\nocite{*}
 \bibliography{citations}
 \end{document}
