--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -116,6 +116,6 @@ inner=1.25in]{geometry}
 \usepackage{etoolbox}
 
 \bibliographystyle{unsrtnat}
-\renewcommand\bibpreamble{\vspace{-5em}} % choose a suitable vert. skip
+\renewcommand\bibpreamble{\vspace{-0.8\baselineskip}} % choose a suitable vert. skip
 \setlength{\bibsep}{0pt} % no extra vert. space between bib items
 \renewcommand{\refname}{\large 6. References}
