--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -116,6 +116,6 @@ inner=1.25in]{geometry}
 \bibliographystyle{unsrt}	
 \usepackage{natbib}
 \usepackage{etoolbox}
+\renewcommand\bibname{References \vspace*{-10mm}\vspace*{-10mm}}
 
-\renewcommand\bibpreamble{\vspace{-0.8\baselineskip}} % choose a suitable vert. skip
-\renewcommand{\refname}{\large 6. References}
+
