--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -116,6 +116,6 @@ inner=1.25in]{geometry}
 \bibliographystyle{unsrt}	
 \usepackage{natbib}
 \usepackage{etoolbox}
-\renewcommand\bibname{References \vspace*{-10mm}\vspace*{-10mm}}
+\renewcommand\bibname{References}{\vskip1cm} 
 
 
