--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -116,6 +116,7 @@ inner=1.25in]{geometry}
 \bibliographystyle{unsrt}	
 \usepackage{natbib}
 \usepackage{etoolbox}
-\renewcommand\bibname{References}{\vskip1cm} 
+\renewcommand\bibname{References}{\vspace*{-10mm}} 
+
 
 
