--- a/UofRdissertation.sty
+++ b/UofRdissertation.sty
@@ -116,7 +116,8 @@ inner=1.25in]{geometry}
 \bibliographystyle{unsrt}	
 \usepackage{natbib}
 \usepackage{etoolbox}
-\renewcommand\bibname{References}{\vspace*{-10mm}} 
 
+
+\renewcommand\bibname{\vspace*{-20mm} References \vspace*{-20mm}}
 
 
