--- a/citations.bib
+++ b/citations.bib
@@ -328,6 +328,32 @@ doi = {10.1063/1.1150092},
 URL = {https://doi.org/10.1063/1.1150092 }}}
 
 
+
+
+@article{PhysRevA.91.033629,
+  title = {Testing gravity with cold-atom interferometers},
+  author = {Biedermann, G. W. and Wu, X. and Deslauriers, L. and Roy, S. and Mahadeswaraswamy, C. and Kasevich, M. A.},
+  journal = {Phys. Rev. A},
+  volume = {91},
+  issue = {3},
+  pages = {033629},
+  numpages = {10},
+  year = {2015},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.91.033629},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.91.033629}
+}
+
+
+@article{kasevich2014prospects,
+  title={{Prospects for improved accuracy in the determination of G using atom interferometry}},
+  author={Kasevich, Mark and Donnelly, Christine and Overstreet, Chris},
+  journal={Depts. of Physics, Applied Physics and EE Stanford University},
+  year={2014},
+  url  ={https://pdfs.semanticscholar.org/presentation/3a8d/94dcb6fcd7c381e2b51787d7e5e39438a6c5.pdf}
+}
+
 @article{SS316,
   title = {ASSDA Technical FAQ No 3 “Magnetic effects of stainless steels”},
   author = {Australian Stainless Steel Development Association },
