--- a/citations.bib
+++ b/citations.bib
@@ -354,6 +354,19 @@ URL = {https://doi.org/10.1063/1.1150092 }}}
   url  ={https://pdfs.semanticscholar.org/presentation/3a8d/94dcb6fcd7c381e2b51787d7e5e39438a6c5.pdf}
 }
 
+
+
+@article{howell2019,
+  title = {Gravitational sensing with weak value based optical sensors},
+  author = {Andrew N. Jordan, Philippe Lewalle, Jeff Tollaksen and John C. Howell},
+  /journal = {Quantum Stud.: Math. Found.},
+  volume = {6},
+  pages = {169–180},
+  year = {2019},
+  doi = {10.1103/PhysRevLett.114.170801},
+  url = {https://doi.org/10.1007/s40509-018-0175-9}
+}
+
 @article{SS316,
   title = {ASSDA Technical FAQ No 3 “Magnetic effects of stainless steels”},
   author = {Australian Stainless Steel Development Association },
