--- a/chapter.tex
+++ b/chapter.tex
@@ -23,7 +23,8 @@
 %\subfile{\main/chapters/1 - introduction}
 %\subfile{\main/chapters/2 - theoretical background}
 %\subfile{\main/chapters/3 - thesis aims}
-\subfile{\main/chapters/4 - methods and results}
+\subfile{\main/chapters/6 - appendix}
+
 %\subfile{\main/chapters/5 - summary and conclusion}
 
 
