--- a/frontmatter/title.tex
+++ b/frontmatter/title.tex
@@ -9,8 +9,8 @@
 \end{figure}
 \doublespacing
 \begin{center}
-  {\titlefont Optical Gravity Sensing \par \vspace{10 mm}
-   Using Radiation Cooling
+  {\titlefont Gravitational Measurement \par \vspace{10 mm}
+   Aided by Radiation Cooling
    }
    \vspace{1in}
    
