--- a/frontmatter/title.tex
+++ b/frontmatter/title.tex
@@ -9,7 +9,7 @@
 \end{figure}
 \doublespacing
 \begin{center}
-  {\titlefont Gravitational Measurement \par \vspace{10 mm}
+  {\titlefont Gravimetric Sensing \par \vspace{10 mm}
    Aided by Radiation Cooling
    }
    \vspace{1in}
