--- a/frontmatter/dedication.tex
+++ b/frontmatter/dedication.tex
@@ -6,7 +6,18 @@
 \begin{center}
 \hspace{0pt}
 \vfill
-\emph{Optional Dedication. Probably to your parents}
+\emph{I dedicate my dissertation work to my family and many friends. A special
+feeling of gratitude to my loving parents, William and Louise Johnson whose
+words of encouragement and push for tenacity ring in my ears. My sisters Katie,
+Linda and Rhonda have never left my side and are very special.
+ I also dedicate this dissertation to my many friends and church family who have
+supported me throughout the process. I will always appreciate all they have done,
+especially Suquesta Myers for helping me develop my technology skills, LaTanja
+Riley-Hedgepeth for the many hours of proofreading, and Ramona Taylor for
+helping me to master the leader dots.
+ I dedicate this work and give special thanks to my best friend Nelson L.
+Jennings and my wonderful daughter Cimone for being there for me throughout the
+entire doctorate program. Both of you have been my best cheerleaders.}
 \vfill
 \hspace{0pt}
 \end{center}
