--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -3,6 +3,7 @@
 \begin{document}
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}  
+\iffalse
 Taken from \url{http://www.rochester.edu/Theses/}: ``Acknowledgments are a statement of appreciation from you to others such as mentors, advisors, colleagues, friends and family, for their support during your doctoral study. Recognition of colleagues’ or mentors’ direct contributions to this work and of awards or funding sources that provided support for the work will appear in a subsequent section on Contributors and Funding Sources.''
 \par\noindent
 I dedicate my dissertation work to my family and many friends. A special
@@ -17,5 +18,43 @@ helping me to master the leader dots.
  I dedicate this work and give special thanks to my best friend Nelson L.
 Jennings and my wonderful daughter Cimone for being there for me throughout the
 entire doctorate program. Both of you have been my best cheerleaders.
+
+
+First and foremost I wish to thank my wife, Kelly, who has stood by me
+through all my travails, my absences, my fits of pique and impatience. She gave me
+support and help, discussed ideas and prevented several wrong turns. She also
+supported the family during much of my graduate studies. Along with her, I want to
+acknowledge my two sons, Ian and Bảo-Ân. They have never known their dad as
+anything but a student, it seems. Good boys, both, and great sources of love and relief
+from scholarly endeavor. In fact, all my family have been steadfast and supportive.
+My siblings and their families, my parents-in-law and brothers-in-law, and the vast
+extended family from both my side and my wife’s side have all been wonderful – and
+very patient.
+\fi
+
+
+
+Most of all, this dissertation is dedicated to my beloved family. My wife, Kelly,
+has been extraordinarily supportive and has made countless sacrifices throughout the entire
+process. My two children, Tom and Keren, have also motivated me to accomplish this
+dissertation in a timely manner. I hope I have made you both proud. I wish to express my
+sincere gratitude to my parents for their exceptional love and support. Their constant support for me and my progress during this entire journey have allowed me
+to successfully complete this project. 
+\par\noindent
+I would like to express the deepest appreciation for my Ph.D. advisor, Professor Howell, for his continual supervision and valuable feedback. He
+has provided me with insightful comments on my research that have been a substantial aid
+in this accomplishment. Without his guidance and persistent support, I would never have
+been able to complete my dissertation. Further, I extend my gratitude to the staff of the Hebrew University workshop headed by Avner for their assistance in designing and their careful manufacturing of the experiment components. I know that required a great deal of investment.
+
+
+\par\noindent
+
+
+
+
+
+
+
+
 
 \end{document}
