--- a/master.tex
+++ b/master.tex
@@ -14,6 +14,7 @@
 \singlespacing
 
 \tableofcontents
+\addtocontents{toc}{\vspace{-1cm}}
 \begin{spacing}{1.5}
 
 %\subfile{\main/frontmatter/biography}
