--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -1,6 +1,7 @@
 \providecommand{\main}{..}
 \documentclass[\main/master.tex]{subfiles}
 \begin{document}
+\newspacing
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}  
 \iffalse
