--- a/Presentation.tex
+++ b/Presentation.tex
@@ -63,6 +63,30 @@
 	\typesetFrontSlides
 
 % Your Slides Start here:
+\section{Theoretical background}
+\subsection{Torsional pendulum}
+\begin{frame}{Torsional pendulum}
+	\framesubtitle{Slide subtitle \#1}
+	\begin{itemize}
+		\item Use the \texttt{itemize} environment frequently.
+		\pause
+		\item Use short sentences and phrases.
+		\pause
+		\item In this presentation we use the \textbackslash{}\texttt{pause} macro.
+	\end{itemize}
+\end{frame}
+
+
+
+
+
+
+
+
+
+
+
+
 
 \section{Motivaton}
 
