--- a/Presentation.tex
+++ b/Presentation.tex
@@ -66,13 +66,15 @@
 \section{Theoretical background}
 \subsection{Torsional pendulum}
 \begin{frame}{Torsional pendulum}
-	\framesubtitle{Slide subtitle \#1}
+	\framesubtitle{Torsional pendulum}
 	\begin{itemize}
-		\item Use the \texttt{itemize} environment frequently.
+		\item Oscillator made of a mass hung by a string from a fixed point allowing it to swing freely. 
 		\pause
 		\item Use short sentences and phrases.
 		\pause
-		\item In this presentation we use the \textbackslash{}\texttt{pause} macro.
+		\item When the mass is displaced from equilibrium angle, a linear restoring torque, back to the equilibrium position.
+		\pause
+		\item The restoring tourqe is given by $\tau = -\kappa\cdot\theta$.
 	\end{itemize}
 \end{frame}
 
