--- a/Presentation.tex
+++ b/Presentation.tex
@@ -68,11 +68,10 @@
 \begin{frame}{Torsional pendulum}
 	\framesubtitle{Torsional pendulum}
 	\begin{itemize}
-		\item Oscillator made of a mass hung by a string from a fixed point allowing it to swing freely. 
+		\item Torsional pendulum is an oscillator made of a mass hung by a string.
+		
 		\pause
-		\item Use short sentences and phrases.
-		\pause
-		\item When the mass is displaced from equilibrium angle, a linear restoring torque, back to the equilibrium position.
+		\item When the mass is displaced from equilibrium angle, there is a linear restoring torque.
 		\pause
 		\item The restoring tourqe is given by $\tau = -\kappa\cdot\theta$.
 	\end{itemize}
